{
  "version": 4,
  "terraform_version": "1.4.2",
  "serial": 168,
  "lineage": "54c4f7f7-73ec-a66f-b46b-06a499a294e5",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-03-30T06:29:04.381-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/anassproject/global/firewalls/allow-ssh",
            "log_config": [],
            "name": "allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/anassproject/global/networks/terraform-network",
            "priority": 1000,
            "project": "anassproject",
            "self_link": "https://www.googleapis.com/compute/v1/projects/anassproject/global/firewalls/allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "icmp",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2023-03-30T06:29:04.436-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/anassproject/global/firewalls/allow-icmp",
            "log_config": [],
            "name": "allow-icmp",
            "network": "https://www.googleapis.com/compute/v1/projects/anassproject/global/networks/terraform-network",
            "priority": 1000,
            "project": "anassproject",
            "self_link": "https://www.googleapis.com/compute/v1/projects/anassproject/global/firewalls/allow-icmp",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "terraform-network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "3000",
                  "4000"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-03-30T06:37:09.549-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/anassproject/global/firewalls/tf-www-firewall",
            "log_config": [],
            "name": "tf-www-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/anassproject/global/networks/terraform-network",
            "priority": 1000,
            "project": "anassproject",
            "self_link": "https://www.googleapis.com/compute/v1/projects/anassproject/global/firewalls/tf-www-firewall",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20230306",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/anassproject/zones/europe-west9-a/disks/terraform-instance"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/anassproject/zones/europe-west9-a/instances/terraform-instance",
            "instance_id": "6565469084048740438",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-standard-4",
            "metadata": {
              "ssh-keys": "anassdah5:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQDC72kcRMuwIcIsF2AZpasjQYzWcRQqISwQGGXoXaGokwoAZWIShWyaD5XgM5Qi/fgH5WEsfWPE1QvPHDRuDpVAX9Uo1ErhrxMHoSfAJ41HLNEHqaBQUMP/goHqcVTXq+STaDrU75l2h9i7wOxyjgVOmOIqaLzN3zB4sGpmwBJNnkRG0J/6KSsTCa0wpK0SK5454YdikcOOnRH6oyNSgNU4BEbX1HzuPs148vpVbO/wUyY8A7NDLiFWMcx7hFyk/3FPVQ5xtlM7PcIRMGTQOstfmJ1tUbmBDvIo9CHwdl0/ln8D53SFtu+NcpbN/L/pJoUyrMs5q+TBO75u4+9VLPZRC4zol4yacjD3Is5CDNyDzJCPMx77BTbuHuxzgkzDGMSiwVdD9yoxF9QuadRgUzeN9pqmWZMosOAffxmBAjA [...]
            },
            "metadata_fingerprint": "3gxd2em_Ixs=",
            "name": "terraform-instance",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.155.170.255",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/anassproject/global/networks/terraform-network",
                "network_ip": "10.200.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/anassproject/regions/europe-west9/subnetworks/terraform-network",
                "subnetwork_project": "anassproject"
              }
            ],
            "project": "anassproject",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/anassproject/zones/europe-west9-a/instances/terraform-instance",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "dev",
              "web"
            ],
            "tags_fingerprint": "XaeQnaHMn9Y=",
            "zone": "europe-west9-a"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": true,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/anassproject/global/networks/terraform-network",
            "mtu": 0,
            "name": "terraform-network",
            "project": "anassproject",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/anassproject/global/networks/terraform-network"
          }
        }
      ]
    }
  ]
}